--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -26,12 +26,12 @@ Sweden
 jacob@js.se
 %
 \section{languages}
-Swedish mother tongue
-English fluency
+Svenska modersmål
+Engelska flytande
+Latin skoj men glömt
 %
 \section{programming}
-{\color{red} $\varheartsuit$} R
-Pascal, Rust, Java, C#, SQL, Bash
+{\color{red} $\varheartsuit$} Pascal, {\color{red} $\varheartsuit$} Rust, Java, C\#, SQL, Bash, Ansible
 \LaTeX{}
 %
 \end{aside}
@@ -43,7 +43,7 @@ Pascal, Rust, Java, C#, SQL, Bash
 \section{skills}
   \vspace{-0.2cm}
 
-Skill 1, skill 2, skill 3, skill 4, skill 5.
+  Linux, Windows, Programming, System management, Shell, Vim, Support, Management, System planning
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -61,33 +61,51 @@ Skill 1, skill 2, skill 3, skill 4, skill 5.
   A description of what I do!}
 %------------------------------------------------
 \entry
-  {2011--2014}
-  {COMPANY 2}
-  {City, Country}
-  {\jobtitle{Job Title}\\
-  Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description.\\
-  Detailed achievements:
+  {2010-2020}
+  {Cefit AB}
+  {Båstad, Sweden}
+  {\jobtitle{Owner}\\
+    Jag ville testa hur det var att ha ett eget företag, då båda
+    mina föräldrar vart entreprenörer. Till att börja med var detta inte
+    heller något problem alls och jag gjorde goda inkomster, fick bra 
+    kunder, professionella relationer och kontaktnät.\\
+
+    Även här tog dock livet över efter ett tag, då vi råkade ut för riktigt
+    svåra händelser jag och min familj. Vilket blev en nedåtgående spiral
+    som jag inte vill gå närmare in på här, men det yttrade sig i utbrändhet.\\
+    
+    Jag tappade helt intresset för allt, vilket till slut gjorde att jag
+    valde, att titta på nya vägar framåt. Jag sålde av största delen av 
+    min verksamhet och tog ett sabbatsår.\\
+
+    Detailed achievements:
   \begin{itemize}
     \item Achievement 1. Achievement 1. Achievement 1. 
     \item Achievement 2. Achievement 2. Achievement 2. Achievement 2. Achievement 2. Achievement 2.
     \item Achievement 3. Achievement 3. Achievement 3. Achievement 3.  
-  \end{itemize}}
+  \end{itemize}}\\
 %------------------------------------------------
 \entry
   {2008--2011}
-  {COMPANY 1}
-  {City, Country}
+  {Sverige.net / ItHalland (Media network AB)}
+  {Halmstad, Sweden}
   {\jobtitle{Job Title}\\
-  Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description.\\
+    Då jag fick barn valde jag att ta en paus från det hektiska liv det var 
+    att vara IT-chef och med det ansvar som man hade svårt att reglera. 
+    Jag märkte att jag inte hade tid att träffa mina barn annat än några
+    timmar på helgen, valde jag att avsluta min anställning och starta
+    eget eftersom detta innebar att jag kunde jobba hemifrån och styra
+    mera över min tid.\\
+
   Detailed achievements:
   \begin{itemize}
     \item Achievement 1. Achievement 1. Achievement 1. Achievement 1. Achievement 1. Achievement 1. Achievement 1. Achievement 1. 
-  \end{itemize}}
+  \end{itemize}} \\
 %------------------------------------------------
 \entry
   {2007--2008}
-  {COMPANY 1}
-  {City, Country}
+  {Buller Data AB}
+  {Båstad, Sweden}
   {\jobtitle{Job Title}\\
   Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description. Job description.\\}
 %------------------------------------------------
