Adding text for imCode

--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -60,20 +60,22 @@ Latin skoj men glömt
   Jag är medansvarig för systemen hos imCode, och även till viss del i
   kundkontakter. Kanske här med de lite mer tekniska delarna.
   
- %   Arbetsuppgifter:
- % \begin{itemize}
- %   \item Systemutveckling
- %   \item Virtualisering av våra egna och kundmiljöer.
- %   \item Automatisering av system, mestadels med Ansible,
- %   \item Installationer av ny och känd mjukvara.
- %   \item Guidning och testning åt andra utvecklare.
- %   \item Driftövervakning av egna och kundsystem.
- %   \item Kundsupport gällande mer tekniska frågor.
- %   \item Internsupport gällande tekniska planeringar och frågor.
+    Arbetsuppgifter:
+  \begin{itemize}
+    \item Systemutveckling
+    \item Virtualisering av våra egna och kundmiljöer.
+    \item Automatisering av system, mestadels med Ansible,
+    \item Installationer av ny och känd mjukvara.
+    \item Guidning och testning åt andra utvecklare.
+    \item Driftövervakning av egna och kundsystem.
+    \item Kundsupport gällande mer tekniska frågor.
+    \item Internsupport gällande tekniska planeringar och frågor.
+    \item Utveckling, installation och underhåll för KOHA,Lots och VuFind (bibliotekssystem.)
+    \item Utveckling, installation och underhåll Lots Vufind
  %   \item ...
  %   \item (detta var några av mina uppgifter.)
 
- % \end{itemize}
+  \end{itemize}
   }
 %------------------------------------------------
 \entry
