Adding text for imCode

--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -57,9 +57,14 @@ Latin skoj men glömt
   {imCode Partner AB}
   {Visby, Sverige}
   {\jobtitle{System utvecklare}\\
-  Jag är medansvarig för systemen hos imCode, och även till viss del i
-  kundkontakter. Kanske här med de lite mer tekniska delarna.
-  
+      ImCode jobbar i första hand med olika ASP lösningar som är fokuserade
+      mot större organisationer, kommuner och landsting. Speciellt då avancerade
+      CMS system och biblioteks system. Som systemutvecklare jobbar jag med
+      båda dessa inriktningar, mestadels bakom kulisserna. Mit arbete består
+      här med att se till att systemen bakom fungerar; Linux-, SQL-, 
+      Indexerings-servrar och liknande. Men även utveckling av mjukvara för
+      denna drift och nya funktioner för kunderna.
+
     Arbetsuppgifter:
   \begin{itemize}
     \item Systemutveckling
@@ -70,7 +75,7 @@ Latin skoj men glömt
     \item Driftövervakning av egna och kundsystem.
     \item Kundsupport gällande mer tekniska frågor.
     \item Internsupport gällande tekniska planeringar och frågor.
-    \item Utveckling, installation och underhåll för KOHA,Lots och VuFind (bibliotekssystem.)
+    \item Utveckling, installation och underhåll för KOHA,Lots och VuFind.
     \item Utveckling, installation och underhåll Lots Vufind
  %   \item ...
  %   \item (detta var några av mina uppgifter.)
