Adding text for imCode

--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -65,18 +65,18 @@ Latin skoj men glömt
       Indexerings-servrar och liknande. Men även utveckling av mjukvara för
       denna drift och nya funktioner för kunderna.
 
-    Arbetsuppgifter:
-  \begin{itemize}
-    \item Systemutveckling
-    \item Virtualisering av våra egna och kundmiljöer.
-    \item Automatisering av system, mestadels med Ansible,
-    \item Installationer av ny och känd mjukvara.
-    \item Guidning och testning åt andra utvecklare.
-    \item Driftövervakning av egna och kundsystem.
-    \item Kundsupport gällande mer tekniska frågor.
-    \item Internsupport gällande tekniska planeringar och frågor.
-    \item Utveckling, installation och underhåll för KOHA,Lots och VuFind.
-    \item Utveckling, installation och underhåll Lots Vufind
+%    Arbetsuppgifter:
+%  \begin{itemize}
+%    \item Systemutveckling
+%    \item Virtualisering av våra egna och kundmiljöer.
+%    \item Automatisering av system, mestadels med Ansible,
+%    \item Installationer av ny och känd mjukvara.
+%    \item Guidning och testning åt andra utvecklare.
+%    \item Driftövervakning av egna och kundsystem.
+%    \item Kundsupport gällande mer tekniska frågor.
+%    \item Internsupport gällande tekniska planeringar och frågor.
+%    \item Utveckling, installation och underhåll för KOHA,Lots och VuFind.
+%    \item Utveckling, installation och underhåll Lots Vufind
  %   \item ...
  %   \item (detta var några av mina uppgifter.)
 
