Adding text for imCode

--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -80,7 +80,7 @@ Latin skoj men glömt
  %   \item ...
  %   \item (detta var några av mina uppgifter.)
 
-  \end{itemize}
+  %\end{itemize}
   }
 %------------------------------------------------
 \entry
