Adding text for imCode

--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -43,7 +43,7 @@ Latin skoj men glömt
 \section{färdighet}
   \vspace{-0.2cm}
 
-  Linux, Windows, Programmering, System management, Shell, Vim, Support, Management, System planering
+  Linux, Windows, Programmering, System management, Networking, TCP, Shell, Vim, Support, Management, System planering, KOHA, VuFind
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
@@ -76,7 +76,7 @@ Latin skoj men glömt
 %    \item Kundsupport gällande mer tekniska frågor.
 %    \item Internsupport gällande tekniska planeringar och frågor.
 %    \item Utveckling, installation och underhåll för KOHA,Lots och VuFind.
-%    \item Utveckling, installation och underhåll Lots Vufind
+%    \item Utveckling, installation och underhåll Lots VuFind
  %   \item ...
  %   \item (detta var några av mina uppgifter.)
 
