Adding text for imCode

--- a/latex/cv/cv.tex
+++ b/latex/cv/cv.tex
@@ -43,7 +43,7 @@ Latin skoj men glömt
 \section{färdighet}
   \vspace{-0.2cm}
 
-  Linux, Windows, Programmering, System management, Networking, TCP, Shell, Vim, Support, Management, System planering, KOHA, VuFind, SOLR
+  Linux, Windows, Programmering, System management, Networking, TCP, Shell, Vim, Support, Management, System planering, KOHA, VuFind, Solr
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
